[metadata]
# replace with your username:
name = dbmap-davisidarta
version = 1.2.3
author = Davi Sidarta-Oliveira
author_email = davisidarta@fcm.unicamp
description = Diffusion-based Manifold Approximation Projection: fast diffusion metrics, graphs and layout for near-optimal dimensionality reduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davisidarta/dbMAP
project_urls =
    Bug Tracker = https://github.com/davisidarta/dbMAP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNP GLP 2.0
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6