[metadata]
# replace with your username:
name = dbmap
version = 1.2
author = Davi Sidarta-Oliveira
author_email = davisidarta@fcm.unicamp.br
description = dbMAP: diffusion metrics, graphs and layouts for machine-learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davisidarta/dbMAP
project_urls =
    Bug Tracker = https://github.com/davisidarta/dbMAP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6